--- a/jermainestrand-portfolio-1/portfolio/src/styles/Navbar.css
+++ b/jermainestrand-portfolio-1/portfolio/src/styles/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
-    background-color: #333;
-    color: rgb(65, 164, 225);
+    background-color: #c21809;
+    color: #333;
     padding: 10px;
     display: flex;
     justify-content: space-between;
