--- a/src/components/Nav/Navbar.css
+++ b/src/components/Nav/Navbar.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
     background-color: #c21809;
     color: #333;
     padding: 10px;
@@ -11,4 +11,4 @@
     color: white;
     text-decoration: none;
     padding: 10px;
-}
+} */
