--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,19 @@
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+:root {
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 400; */
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: whitesmoke;
+  background-color: #FAF0E6;
+  background-image: url('https://getwallpapers.com/wallpaper/full/a/c/2/688542-popular-software-wallpapers-1920x1200.jpg');
 
-  font-synthesis: none;
+  /* font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
 }
-
+/* 
 a {
   font-weight: 500;
   color: #646cff;
